# doclinker

./: .gitignore  README.md  package-lock.json  package.json
docs/: DocLinker 官方需求文档.md  DocLinker提示词.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  db.rs  error.rs  indexer.rs  lib.rs  main.rs  models.rs  scanner.rs  watcher.rs
